# C-Projects

./: .gitignore  README.md
Calculator-Polish-Notation/: README.md  calculator.c
Pipes and Process Interactions/: README.md  proc-int.c
Shell Interpreter/: README.md  shell.c
Shell Interpreter/shell/: CMakeLists.txt
Shell Interpreter/shell/dep/: cvector.h
Shell Interpreter/shell/inc/: command.h  pipe.h  redirections.h  utilities.h
Shell Interpreter/shell/legacy/: executable.c  executable.h  streams.h  utilities.h
Shell Interpreter/shell/src/: command.c  pipe.c  redirections.c  shell.c  utilities.c
War&Peace Frequency Analysis/: README.md  frequency-analysis.c
